--- a/src/components/CurrencyForm.css
+++ b/src/components/CurrencyForm.css
@@ -3,7 +3,7 @@
   height: 90%;
   display: flex;
   justify-content: center;
-  padding-top: 30%;
+  padding-top: 20rem;
 }
 
 .currency-form-center-horizontal
